[package]
name = "api-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { git = "ssh://git@bitbucket.org/fortanix/serde-json.git", branch = "base64_bytes" }
