[package]
name = "api-model"
version = "0.1.0"
authors = ["Fortanix, Inc."]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fortanix/salmiac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"

[patch.crates-io]
serde_json = { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
