[package]
name = "api-model"
version = "0.1.0"
authors = ["Fortanix, Inc."]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fortanix/salmiac"

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
