[package]
name = "server"
version = "0.1.0"
authors = ["NikitaShyrei <nikita.shyrei@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webservice = { git = "ssh://git@bitbucket.org/fortanix/roche.git" }
senclave = { git = "ssh://git@bitbucket.org/fortanix/roche/common/senclave", features = ["attestation_insecure"]  }

