[package]
name = "server"
version = "0.1.0"
authors = ["NikitaShyrei <nikita.shyrei@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
container-converter = { path = "../../tools/container-converter" }
database = { git = "ssh://git@bitbucket.org/fortanix/roche.git"  }
env_logger = "0.7"
iron =  "0.6.1"
log = "0.4"
once_cell = "1.3.1"
senclave = { git = "ssh://git@bitbucket.org/fortanix/roche.git", features = ["attestation_insecure"]  }
tokio = { version = "1.0.1", features = ["macros", "rt"] }
webservice = { git = "ssh://git@bitbucket.org/fortanix/roche.git" }
