[package]
name = "container-converter"
version = "0.1.0"
authors = ["NikitaShyrei <nikita.shyrei@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.2.0"
async-trait = "0.1.51"
env_logger = "0.7"
exitcode = "1.1.2"
log = "0.4"
clap = "2.33"
shiplift = { git = "https://github.com/fortanix/shiplift.git" }
sys-mount = "2.0.2"
nix = { version = "0.26.1", features = ["user", "fs"] }
futures = "0.3"
tar = { git = "https://github.com/alexcrichton/tar-rs" }
tokio = { version = "1.0.1", features = ["macros", "rt"] }
tempfile = "3.2.0"
toml = "0.5.8"
serde = { version = "1.0.127", features = ["derive"] }
docker-image-reference = "0.1.0"
serde_json = "1.0.68"
api-model = { path = "../../container-converter-service/api-model", package = "nitro-enclaves-converter-api-model" }
model_types = { path = "../../../model/model_types" }
rand = "0.8.4"
http = "0.2.8"

[dev-dependencies]
chrono = "0.4.22"
