[package]
name = "container-converter"
version = "0.1.0"
authors = ["Fortanix, Inc."]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fortanix/salmiac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-model = { path = "../../api-model", features = ["serde"] }
async-process = "1.2.0"
async-trait = "0.1.51"
clap = "2.33"
docker-image-reference = "0.1.0"
env_logger = "0.7"
exitcode = "1.1.2"
futures = "0.3"
http = "0.2.8"
log = "0.4"
nix = { version = "0.26.1", features = ["user", "fs"] }
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
shiplift = { git = "https://github.com/fortanix/shiplift.git" }
sys-mount = "1.5.1"
tar = { git = "https://github.com/alexcrichton/tar-rs" }
tempfile = "3.2.0"
tokio = { version = "1.0.1", features = ["macros", "rt"] }
toml = "0.5.8"

[dev-dependencies]
chrono = "0.4.22"

[patch.crates-io]
serde_json = { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
