[package]
name = "enclave"
version = "0.1.0"
authors = ["Fortanix, Inc."]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fortanix/salmiac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-model = { path = "../../api-model", features = ["serde"] }
async-process = "1.2.0"
async-trait = "0.1.51"
base64 = "0.13.0"
clap = "2.33"
em-app = { git = "https://github.com/fortanix/rust-sgx.git"}
env_logger = "0.7"
futures = "0.3"
hyper = "0.10"
interfaces = "0.0.8"
ipnetwork = { version = "0.18.0", features = ["serde"] }
log = "0.4"
mbedtls = { version = "0.9.3" }
nix = "0.15.0"
pkix = "0.1.2"
rand = "0.8.5"
rtnetlink = "0.8.0"
sdkms = { version = "0.2.1", default-features = false, features = ["hyper-native-tls"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.68"
shared = { path = "../shared" }
sysinfo = "0.29.8"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
tokio-vsock = "0.3.1"
tun = {version = "0.5.3" ,features = ["async"] }
url = "2.3.1"
uuid = "0.7.4"

[build-dependencies]
mbedtls = { version = "0.9.3", features = [ "rdrand", "std" ], default-features = false }
pkix = "0.1.2"
serde_cbor = "0.11.2"

[dev-dependencies]
lazy_static = "1.0"
parent_lib = { path = "../parent/lib" }