[package]
name = "parent"
version = "0.1.0"
authors = ["NikitaShyrei <nikita.shyrei@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.2.0"
etherparse = { git = "https://github.com/fortanix/etherparse.git", branch = "udp_checksum_from_slice" }
shared = { path = "../shared" }
clap = "2.33"
env_logger = "0.7"
log = "0.4"
nix = { version = "0.26.1", features = ["hostname"] }
pcap = "0.9.1"
rtnetlink = "0.8.0"
tokio = { version = "1.21.1", features = ["macros", "rt", "rt-multi-thread"] }
ipnetwork = { version = "0.18.0", features = ["serde"] }
tokio-vsock = "0.3.1"
futures = "0.3"
pcap-async = "0.4.1"
tun = {version = "0.5.3" ,features = ["async"] }
em-app = { git = "https://github.com/fortanix/rust-sgx.git" }
