[package]
name = "parent"
version = "0.1.0"
authors = ["Fortanix, Inc."]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fortanix/salmiac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-model = { path = "../../api-model" }
async-process = "1.2.0"
clap = "2.33"
em-app = { workspace = true }
env_logger = "0.7"
etherparse = { git = "https://github.com/fortanix/etherparse.git", branch = "udp_checksum_from_slice" }
futures = "0.3"
ipnetwork = { version = "0.18.0", features = ["serde"] }
log = "0.4"
nix = { version = "0.26.1", features = ["hostname"] }
pcap = "0.9.1"
pcap-async = "0.4.1"
rtnetlink = "0.8.0"
shared = { path = "../shared" }
tempdir = "0.3.7"
tokio = { version = "1.21.1", features = ["macros", "rt", "rt-multi-thread", "io-std", "io-util"] }
tokio-vsock = "0.3.1"
tun = {version = "0.5.3" ,features = ["async"] }
parent_lib = { path = "lib" }