[package]
name = "shared"
version = "0.1.0"
authors = ["NikitaShyrei <nikita.shyrei@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
env_logger = "0.7"
log = "0.4"
nix = "0.15.0"
vsock = "0.1.5"
byteorder = "1.3"
pcap = "0.8.1"
tun = {version = "0.5.1" ,features = ["mio"] }
threadpool = "1.7.1"
rtnetlink = "0.8.0"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"
serde = { version = "1.0.127", features = ["derive"] }
serde_cbor = "0.11.2"
ipnetwork = { version = "0.18.0", features = ["serde"] }
