[package]
name = "shared"
version = "0.1.0"
authors = ["NikitaShyrei <nikita.shyrei@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.2.0"
clap = "2.33"
log = "0.4"
byteorder = "1.3"
tun = {version = "0.5.3" ,features = ["async"] }
threadpool = "1.7.1"
rtnetlink = "0.8.0"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util", "net"] }
tokio-vsock = "0.3.1"
futures = "0.3"
serde = { version = "1.0.127", features = ["derive"] }
serde_cbor = "0.11.2"
ipnetwork = { version = "0.18.0", features = ["serde"] }
async-trait = "0.1.51"
