[package]
name = "shared"
version = "0.1.0"
authors = ["Fortanix, Inc."]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fortanix/salmiac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.2.0"
async-trait = "0.1.51"
byteorder = "1.3"
clap = "2.33"
futures = "0.3"
ipnetwork = { version = "0.18.0", features = ["serde"] }
log = "0.4"
rtnetlink = "0.8.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_cbor = "0.11.2"
threadpool = "1.7.1"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util", "net"] }
tokio-vsock = "0.3.1"
tun = {version = "0.5.3" ,features = ["async"] }
