[package]
name = "rest-api"
version = "0.1.0"
authors = ["NikitaShyrei <nikita.shyrei@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
iron = "0.6.1"
router = "0.6.0"
bodyparser = "0.8.0"
clap = "2.33"
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0.127", features = ["derive"] }
tokio = { version = "1.0.1", features = ["macros", "rt"] }